2002-12-10 Miguel Guzman (Aglanor) <aglanor@telefonica.net>

	* terrain.cfg, moraf.png: added moraf map, quick & dirty version.
	Now you can wander in 3d over the lands of Moraf.


2002-12-10 Miguel Guzman (Aglanor) <aglanor@telefonica.net>

	* OgreApp.cpp: meshes are placed into the OGRE scene when an entity is created.
	Currently they're all squirrels of doom.

	* OgreApp.cpp/h: removed "using namespace ogre". OGRE should not be
	more relevant here than dime or eris. Now it uses the default namesp.


2002-12-07 M Pollard <circlemaster@blueyonder.co.uk>
	* ConfigService.cpp: Initialise static member theInstance to NULL.

	* Application.cpp: Fixed it so that myStateManager is inited to NULL.

	* InputDevice.cpp: Fixed a delete to a delete[].  Fix loads of memory
	  leaks.

	* ColorRenderer.cpp/h BorderRenderer.cpp/h: made some stuff const.

2002-12-07 M Pollard <circlemaster@blueyonder.co.uk>
	* NEWS: update

	* RendererFactory.cpp: Added TILE support.

	* TextBox.h Label.h: Sorted out argument ordering.

	* Button.h: Tidy up and added another constructor.

	* GuiService.cpp/h: Added Console, TextBox, Button and reordered args 
	  for Label changes.

	* TestServices.cpp: Cut datamodel test.

	* StateManager.cpp: Delete old code.

	* states.xml: Added remaining widgets.

2002-12-04 M Pollard <circlemaster@blueyonder.co.uk>
	* RectangleRenderer.cpp/h Renderer.cpp/h: Renamed the file and the
	  class RectangleRenderer to Renderer for better clarity of naming.

	* *Renderer.cpp/h Panel.h TextBox.h Console.cpp/h: Button.h
	  Changed for Renderer name change.

	* Rectangle.h: Made SDLRect returned by getSDLRect a const.

	* DrawDevice.h OGLDrawDevice.cpp/h SDLDrawDevice.cpp/h:
	  Adjusted for changes to Rectangle.
	
2002-12-03 M Pollard <circlemaster@blueyonder.co.uk>
	* OgreApp.cpp/h: Tidy up and the prefix "Example" of Application and
	  FrameListener to "Base"

	* states.xml: Changed syntax to be slightly clearer while adding
	  <layout> & <renderers> tags.
